[package]
name = "clawmonitor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An advanced TUI dashboard and proxy firewall for OpenClaw."

[dependencies]
# 异步运行时与通道
tokio = { version = "1.35", features = ["full"] }
# Web 框架
axum = "0.7"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 终端 UI 框架
ratatui = "0.26"
crossterm = "0.27"
# 时间处理
chrono = "0.4"